--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">extent Report Tests</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">31,407</td><td></td><td></td></tr>
+<tr><td><a href="#t0">extent Report Tests</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34,557</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">extent Report Tests &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">smokeTest.Checkout</td><td><a href="#m0">checkoutTest</a></td><td rowspan="1">1708121357051</td><td rowspan="1">31153</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">extent Report Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">smokeTest.Checkout</td><td><a href="#m0">checkoutTest</a></td><td rowspan="1">1708219882387</td><td rowspan="1">34524</td></tr></tbody>
 </table>
-<h2>extent Report Tests</h2><h3 id="m0">smokeTest.Checkout#checkoutTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [1Thank you for your purchase!] but found [Thank you for your purchase!]
-	at pageObjects.Assertions.checkThatCheckoutSuccess(Assertions.java:10)
-	at smokeTest.Checkout.checkoutTest(Checkout.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>extent Report Tests</h2><h3 id="m0">smokeTest.Checkout#checkoutTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
